--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "eslint": "^9.38.0",
     "express": "^5.1.0",
     "globals": "^16.4.0",
-    "istanbul": "^0.4.5",
     "jasme": "^6.0.0",
     "koa": "^3.0.1",
     "koa-connect": "^2.0.1",
@@ -43,7 +42,8 @@
     "supertest": "^3.3.0",
     "supertest-koa-agent": "^0.3.0",
     "tsd": "^0.30.3",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "nyc": "^17.1.0"
   },
   "peerDependencies": {
     "prom-client": ">=15.0.0"
