fix: replace npm install with npm ci and add provenance flag to npm publish

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,8 +44,8 @@ jobs:
         with:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
-      - run: npm install
-      - run: npm publish --access public
+      - run: npm ci
+      - run: npm publish --provenance --access public
 
   release:
     needs: publish
