--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/breizhhardware/express-prom-bundle.git"
+    "url": "https://github.com/BreizhHardware/express-prom-bundle"
   },
   "engines": {
     "node": ">=18"
